# studies

./: LICENSE  README.md  package-lock.json  package.json
atlassian-components/: README.md  package.json  vite.config.js
atlassian-components/src/: App.jsx  main.jsx
config/: application.rb  credentials.yml.enc
data-structure/: bfs.js  graph.js  index.js  package.json
data-structure/src/: bfs.js  dfs.js  recursion.js
db/: schema.rb
db/migrate/: 20200714173918_change_user_column_name.rb
design-patterns/: factory.js  index.js  package.json  prototype.js  singleton.js
design-patterns/src/: facade.js  proxy.js  singleton.js
go-lang/: go.mod  main.go  server.go
languages/python/: index.py
languages/ruby/: index.rb
languages/rust/: Cargo.toml
nextjs-app/: package.json
nextjs-app/pages/: about.tsx  index.tsx
nextjs-app/styles/: Home.module.css
prisma-node/: .env.sample  index.ts
prisma-node/prisma/: schema.prisma  seed.ts
tech/ai-chatbot/: README.md  index.html  package-lock.json  package.json  vite.config.ts
tech/atlassian-components/: README.md  vite.config.js
tech/go-api/: README.md  go.mod  main.go  todos.db
tech/ktor-api/: build.gradle.kts  settings.gradle.kts
tech/netlify-functions/: index.html  netlify.toml  package.json
tech/nextjs-app/: package-lock.json
tech/nx-ws/: README.md  nx.json  package-lock.json  package.json  tsconfig.base.json
tech/playwright-test/: package-lock.json  (+1 more)
tech/python-langgraph/: .gitignore  README.md  advanced_example.py  basic-flow.py  env.example  main.py  pyproject.toml  test_improvements.py
(+118 files in other folders)
